KRACOEUS-2225
*fixed incorrect validation message being displayed
*made sure that additional doc info is always displayed